--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -8,6 +8,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>SamlApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.5.9-SNAPSHOT</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -20,6 +26,10 @@
 
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -59,14 +69,16 @@
 		<dependency>
 			<groupId>org.springframework.security.extensions</groupId>
 			<artifactId>spring-security-saml2-core</artifactId>
-			<version>1.0.2.BUILD-SNAPSHOT</version>
+			<version>1.0.2.RELEASE</version>
 		</dependency>
 
-		<dependency>
+
+		<!--dependency>
 			<groupId>org.springframework.security.extensions</groupId>
 			<artifactId>spring-security-saml-dsl</artifactId>
-			<version>1.0.0.M3</version>
-		</dependency>
+			<version>1.0.5.M3</version>
+		</dependency-->
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
